--- a/electron/electron-builder.yml
+++ b/electron/electron-builder.yml
@@ -1,6 +1,7 @@
 productName: AccessMod-Desktop
 appId: org.accessmod.desktop
 asar: true
+afterSign: electron-builder-notarize
 directories:
   buildResources: build
 files:
