--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: build_accessmod
 on:
   push:
     branches:
-      - main
       - staging
+      - release
 
 env:
   DOCKER_REPO: "fredmoser"
@@ -68,16 +68,17 @@ jobs:
             ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.AM_VERSION }}
             ${{ env.DOCKER_REPO }}/${{ env.DOCKER_NAME }}:${{ env.DOCKER_TAG_LATEST }}
 
-  #                    _                 
-  #                   | |                
-  #  ____  _____  ____| |  _ _____  ____ 
+  #                    _
+  #                   | |
+  #  ____  _____  ____| |  _ _____  ____
   # |  _ \(____ |/ ___) |_/ ) ___ |/ ___)
-  # | |_| / ___ ( (___|  _ (| ____| |    
-  # |  __/\_____|\____)_| \_)_____)_|    
+  # | |_| / ___ ( (___|  _ (| ____| |
+  # |  __/\_____|\____)_| \_)_____)_|
   # |_|
   packer:
     runs-on: ubuntu-22.04
     needs: docker
+    if: ${{ github.ref_name === 'release' }}
     name: Build VirtualBox ova
     steps:
       - name: Checkout
@@ -87,7 +88,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libc6 libqt5core5a libqt5dbus5 libqt5gui5 libqt5help5 libqt5opengl5 libqt5printsupport5 libqt5widgets5 libqt5x11extras5 libqt5xml5 libssl3 libstdc++6 libvpx7
-      
+
       - name: Install VirtualBox 7.0.14
         run: |
           wget https://download.virtualbox.org/virtualbox/7.0.14/virtualbox-7.0_7.0.14-161095~Ubuntu~jammy_amd64.deb
@@ -102,7 +103,7 @@ jobs:
       - name: Initialize Packer Configuration
         working-directory: ./packer
         run: packer init alpine.pkr.hcl
-        env :
+        env:
           PACKER_GITHUB_API_TOKEN: ${{ secrets.github_token }}
 
       - name: Validate Packer Template
@@ -127,6 +128,7 @@ jobs:
   update_image:
     runs-on: ubuntu-latest
     needs: docker
+    if: ${{ github.ref_name === 'release' }}
     strategy:
       matrix:
         include:
@@ -153,6 +155,7 @@ jobs:
   electron:
     runs-on: ${{ matrix.os }}
     needs: update_image
+    if: ${{ github.ref_name === 'release' }}
     strategy:
       matrix:
         include:
@@ -213,3 +216,31 @@ jobs:
             ./electron/dist/*.dmg
             ./electron/dist/*.deb
             ./electron/dist/*-setup.exe
+  # ______     _
+  # | ___ \   | |
+  # | |_/ /___| | ___  __ _ ___  ___
+  # |    // _ \ |/ _ \/ _` / __|/ _ \
+  # | |\ \  __/ |  __/ (_| \__ \  __/
+  # \_| \_\___|_|\___|\__,_|___/\___|
+  release:
+    runs-on: ubuntu-latest
+    needs: [docker, packer, electron]
+    if: ${{ github.ref_name == 'release' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download All Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: accessmod
+          pattern: accessmod-*
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: accessmod/**
+          body_path: ./release-notes.md
+          token: ${{ secrets.github_token }}
+
