--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
   packer:
     runs-on: ubuntu-22.04
     needs: docker
-    if: ${{ github.ref_name === 'release' }}
+    if: ${{ github.ref_name == 'release' }}
     name: Build VirtualBox ova
     steps:
       - name: Checkout
@@ -128,7 +128,7 @@ jobs:
   update_image:
     runs-on: ubuntu-latest
     needs: docker
-    if: ${{ github.ref_name === 'release' }}
+    if: ${{ github.ref_name == 'release' }}
     strategy:
       matrix:
         include:
@@ -155,7 +155,7 @@ jobs:
   electron:
     runs-on: ${{ matrix.os }}
     needs: update_image
-    if: ${{ github.ref_name === 'release' }}
+    if: ${{ github.ref_name == 'release' }}
     strategy:
       matrix:
         include:
