--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "accessmod",
   "description": "AccessMod build script",
-  "version": "5.8.2-beta.0",
+  "version": "5.8.2",
   "type": "module",
   "scripts": {
     "version": "node version.js",
