--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -245,10 +245,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.AM_VERSION }} 
-          files: |
-            ./accessmod/*.dmg
-            ./accessmod/*.deb
-            ./accessmod/*-setup.exe
+          files: ./accessmod/* 
           body_path: ./release_notes.md
           token: ${{ secrets.github_token }}
 
