Missing units runtime units shared lib

--- a/docker/alpine_base/Dockerfile
+++ b/docker/alpine_base/Dockerfile
@@ -66,6 +66,7 @@ RUN echo "(re) Install R runtime deps" &\
       pcre2 \
       make \
       readline \
+      udunits \
       icu-libs
 
 RUN echo "Install accessmod runtime dep" &\
