--- a/docker/alpine_base/Dockerfile
+++ b/docker/alpine_base/Dockerfile
@@ -287,9 +287,7 @@ RUN Rscript -e 'pak::pkg_install(c(\
 ))'
 
 # Add tabulator tool
-RUN Rscript -e 'pak::pkg_install(c(\
-    "fxi/amtabulator"\
-))'
+RUN Rscript -e 'pak::pkg_install( c("fxi/amtabulator"))'
 
 
 
