--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "version": "node version.js",
-    "version-dry": "node version.js --dry-run",
-    "test": "sh ./test.sh"
+    "version:dry": "node version.js --dry-run",
+    "test": "sh ./test.sh",
+    "dev": "docker compose exec -T am5_dev sh -c \"echo 'source(\\\"run.R\\\")' | R --no-save\""
+
   },
   "keywords": [
     "build scripts",
