--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
 
 services:
   am5_dev: # base image + copy file from app
-    image: fredmoser/accessmod_base:5.8-c
+    image: fredmoser/accessmod_base:5.8-d
     ports:
       - "3080:3000" # Interactive session app (same as Dockerfile)
-      - "5080:5000" # Interactive session http (same as Dockerfile)
       - "3180:3100" # Compose app
-      - "5180:5100" # Compose http
-    command: ["Rscript", "--vanilla", "run.r", "3100", "5100", "5180"]
+    command: ["Rscript", "--vanilla", "run.r", "3100"]
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:3100/status"]
+      test: ["CMD", "wget", "--spider", "http://localhost:3100/health"]
       interval: 5s
       timeout: 60s
       retries: 10
