--- a/proxy/package.json
+++ b/proxy/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.3",
+    "redbird": "^1.0.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
