--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM fredmoser/accessmod_base:5.8-d
+FROM fredmoser/accessmod_base:5.8-e
 LABEL maintainer="frederic.moser@unige.ch"
 WORKDIR /app
 
@@ -11,4 +11,7 @@ RUN echo "Ensures that busybox zip and unzip are removed" &\
 
 # Copy context is expected to be app root
 COPY . .
-CMD Rscript --vanilla run.r
+
+ENTRYPOINT ["/usr/local/bin/update_tz"]
+#CMD Rscript --vanilla run.r
+CMD shiny-manager --version
