--- a/docker/alpine_base/Dockerfile
+++ b/docker/alpine_base/Dockerfile
@@ -300,6 +300,16 @@ RUN apk del _r_dev
 
 
 #------------------------------------------------------------------------------#
+# Build Node.js and install @fxi/shiny-manager
+#------------------------------------------------------------------------------#
+FROM node:21-alpine as build_node
+
+# Install @fxi/shiny-manager globally with minimal size impact
+RUN npm install -g --production @fxi/shiny-manager --log-level=error && \
+    # Remove npm cache
+    npm cache clean --force
+
+#------------------------------------------------------------------------------#
 # CLEANING
 #------------------------------------------------------------------------------#
 FROM common as clean
@@ -315,6 +325,13 @@ RUN ln -sf /usr/local/grass `grass --config path`
 
 # Copy built R libs 
 COPY --from=build_r /usr/local/lib/R /usr/local/lib/R
+
+# Copy Node.js and @fxi/shiny-manager
+COPY --from=build_node /usr/local/bin/node /usr/local/bin/node
+COPY --from=build_node /usr/local/lib/node_modules /usr/local/lib/node_modules
+# Copy custom wrapper script for shiny-manager
+COPY sh/shiny_manager.sh /usr/local/bin/shiny-manager
+COPY sh/update_tz.sh /usr/local/bin/update_tz
 
 # Remove unused file
 RUN find / -name '*.pyc' -delete && \
@@ -401,7 +418,8 @@ ADD data/demo ${AM5_DB_PATH}/demo
 #
 RUN apk add --no-cache tzdata
 
+
 WORKDIR /app
 
-ENTRYPOINT ["sh/update_tz.sh"]
+ENTRYPOINT ["/usr/local/bin/update_tz"]
 CMD ["$GRASSBIN", "--version"]
