--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "version": "node version.js",
     "version:dry": "node version.js --dry-run",
     "test": "sh ./test.sh",
-    "dev": "docker compose exec -T am5_dev sh -c \"echo 'source(\\\"run.R\\\")' | R --no-save\""
+    "dev": "docker compose exec -T am5_dev sh -c \"echo 'source(\\\"run.r\\\")' | R --no-save\""
 
   },
   "keywords": [
