--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,17 +91,40 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install dependencies for VirtualBox 7.0.14
+      - name: Install VirtualBox 7.1 using official repository
         run: |
+          # Add VirtualBox repo key
+          wget -O- https://www.virtualbox.org/download/oracle_vbox_2016.asc | sudo gpg --yes --output /usr/share/keyrings/oracle-virtualbox-2016.gpg --dearmor
+          
+          # Add VirtualBox repository
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/oracle-virtualbox-2016.gpg] https://download.virtualbox.org/virtualbox/debian jammy contrib" | sudo tee /etc/apt/sources.list.d/virtualbox.list
+          
+          # Update and install VirtualBox
           sudo apt-get update
-          sudo apt-get install -y libc6 libqt5core5a libqt5dbus5 libqt5gui5 libqt5help5 libqt5opengl5 libqt5printsupport5 libqt5widgets5 libqt5x11extras5 libqt5xml5 libssl3 libstdc++6 libvpx7
-
-      - name: Install VirtualBox 7.0.14
+          sudo apt-get install -y virtualbox-7.1
+          
+          # Verify installation
+          VBoxManage --version
+          
+      - name: Install VirtualBox Extension Pack
         run: |
-          wget https://download.virtualbox.org/virtualbox/7.0.14/virtualbox-7.0_7.0.14-161095~Ubuntu~jammy_amd64.deb
-          sudo dpkg -i virtualbox-7.0_7.0.14-161095~Ubuntu~jammy_amd64.deb
-          sudo apt-get install -f -y
-
+          wget https://download.virtualbox.org/virtualbox/7.1.8/Oracle_VirtualBox_Extension_Pack-7.1.8.vbox-extpack
+          echo "y" | sudo VBoxManage extpack install --replace Oracle_VirtualBox_Extension_Pack-7.1.8.vbox-extpack
+          
+      - name: Add current user to vboxusers group
+        run: |
+          sudo usermod -aG vboxusers $USER
+          # Reload group membership without logging out
+          newgrp vboxusers
+          
+      - name: Setup kernel modules
+        run: |
+          # Ensure kernel modules are loaded
+          sudo modprobe vboxdrv
+          sudo modprobe vboxnetflt
+          # Check if modules loaded properly
+          lsmod | grep vbox
+          
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
         with:
@@ -117,12 +140,13 @@ jobs:
         working-directory: ./packer
         run: packer validate alpine.pkr.hcl
 
-      - name: Build with Packer
+      - name: Build with Packer with increased logs
         working-directory: ./packer
-        run: packer build -debug -force alpine.pkr.hcl
-
+        run: PACKER_LOG=1 packer build -debug -force alpine.pkr.hcl
+        
       - name: Upload OVA
         uses: actions/upload-artifact@v4
+        if: ${{ !inputs.dry_run }}
         with:
           name: accessmod-virtualbox
           path: packer/_build
