--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
   # |  __/\_____|\____)_| \_)_____)_|
   # |_|
   packer:
-    runs-on: ubuntu-22.04
+    runs-on: macos-13
     needs: docker
     if: ${{ github.ref_name == 'release' || inputs.dry_run }}
     name: Build VirtualBox ova
@@ -91,40 +91,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install VirtualBox 7.1 using official repository
+      - name: Install VirtualBox
         run: |
-          # Add VirtualBox repo key
-          wget -O- https://www.virtualbox.org/download/oracle_vbox_2016.asc | sudo gpg --yes --output /usr/share/keyrings/oracle-virtualbox-2016.gpg --dearmor
-          
-          # Add VirtualBox repository
-          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/oracle-virtualbox-2016.gpg] https://download.virtualbox.org/virtualbox/debian jammy contrib" | sudo tee /etc/apt/sources.list.d/virtualbox.list
-          
-          # Update and install VirtualBox
-          sudo apt-get update
-          sudo apt-get install -y virtualbox-7.1
+          # Install VirtualBox
+          brew install --cask virtualbox
           
           # Verify installation
           VBoxManage --version
-          
-      - name: Install VirtualBox Extension Pack
-        run: |
-          wget https://download.virtualbox.org/virtualbox/7.1.8/Oracle_VirtualBox_Extension_Pack-7.1.8.vbox-extpack
-          echo "y" | sudo VBoxManage extpack install --replace Oracle_VirtualBox_Extension_Pack-7.1.8.vbox-extpack
-          
-      - name: Add current user to vboxusers group
-        run: |
-          sudo usermod -aG vboxusers $USER
-          # Reload group membership without logging out
-          newgrp vboxusers
-          
-      - name: Setup kernel modules
-        run: |
-          # Ensure kernel modules are loaded
-          sudo modprobe vboxdrv
-          sudo modprobe vboxnetflt
-          # Check if modules loaded properly
-          lsmod | grep vbox
-          
+
       - name: Setup Packer
         uses: hashicorp/setup-packer@main
         with:
@@ -140,13 +114,21 @@ jobs:
         working-directory: ./packer
         run: packer validate alpine.pkr.hcl
 
-      - name: Build with Packer with increased logs
+      - name: Build with Packer
         working-directory: ./packer
         run: PACKER_LOG=1 packer build -debug -force alpine.pkr.hcl
         
+      - name: Diagnostic information if build fails
+        if: ${{ failure() }}
+        run: |
+          VBoxManage --version
+          VBoxManage list vms || echo "Could not list VMs"
+          VBoxManage list runningvms || echo "Could not list running VMs"
+          sysctl -a | grep -i kern.hv
+          ls -la ~/VirtualBox\ VMs/ || echo "No VirtualBox VMs directory"
+
       - name: Upload OVA
         uses: actions/upload-artifact@v4
-        if: ${{ !inputs.dry_run }}
         with:
           name: accessmod-virtualbox
           path: packer/_build
