ci: only use manual trigger for builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ name: build_accessmod
 on:
   push:
     branches:
-      - staging
-      - release
+#      - staging
+#      - release
   workflow_dispatch:
     inputs:
       dry_run:
