--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -197,12 +197,6 @@ jobs:
         working-directory: ./electron
         run: yarn install
 
-      - name: Prepare for app notarization
-        if: startsWith(matrix.os, 'macos')
-        run: |
-          mkdir -p ~/private_keys/
-          echo '${{ secrets.mac_api_key }}' > ~/private_keys/AuthKey_${{ secrets.mac_api_key_id }}.p8
-
       - name: Build
         uses: Yan-Jobs/action-electron-builder@v1.7.0
         with:
@@ -210,12 +204,10 @@ jobs:
           build_script_name: build
           package_root: ./electron
           github_token: ${{ secrets.github_token }}
-          mac_certs: ${{ secrets.mac_certs }}
-          mac_certs_password: ${{ secrets.mac_certs_password }}
         env:
-          APPLE_API_KEY: ~/private_keys/AuthKey_${{ secrets.mac_api_key_id }}.p8
-          APPLE_API_KEY_ID: ${{ secrets.mac_api_key_id }}
-          APPLE_API_ISSUER: ${{ secrets.mac_api_key_issuer_id }}
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_TEAM_ID:  ${{ secrets.APPLE_TEAM_ID }} 
+          APPLE_APP_SPECIFIC_PASSWORD :  ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
