--- a/.github/workflows/build_qemu.yml
+++ b/.github/workflows/build_qemu.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'VM Version'
+        description: "VM Version"
         required: false
-        default: '5.8'
+        default: "5.8"
         type: string
 
 jobs:
@@ -17,28 +17,28 @@ jobs:
       options: --privileged
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      run: |
-        apk add --no-cache \
-          alpine-make-vm-image \
-          qemu-img \
-          docker \
-          bash \
-          sudo
+      - name: Install dependencies
+        run: |
+          apk add --no-cache \
+            alpine-make-vm-image \
+            qemu-img \
+            docker \
+            bash \
+            sudo
 
-    - name: Build VM Image
-      run: |
-        cd qemu
-        if [ -n "${{ github.event.inputs.version }}" ]; then
-          sed -i "s/VM_VERSION=\"5.8\"/VM_VERSION=\"${{ github.event.inputs.version }}\"/" config.sh
-        fi
-        ./build.sh
+      - name: Build VM Image
+        run: |
+          cd qemu
+          if [ -n "${{ github.event.inputs.version }}" ]; then
+            sed -i "s/VM_VERSION=\"5.8\"/VM_VERSION=\"${{ github.event.inputs.version }}\"/" config.sh
+          fi
+          ./build.sh
 
-    - name: Upload VM Image
-      uses: actions/upload-artifact@v3
-      with:
-        name: accessmod-vm
-        path: _build/vm/*.vmdk
-        retention-days: 5
+      - name: Upload VM Image
+        uses: actions/upload-artifact@v3
+        with:
+          name: accessmod-vm
+          path: _build/vm/*.vmdk
+          retention-days: 5
