fix(vm): re-added modprob

--- a/.github/workflows/build_qemu.yml
+++ b/.github/workflows/build_qemu.yml
@@ -17,10 +17,11 @@ jobs:
     name: Build x86_64 VM
     runs-on: ubuntu-latest
     steps:
-      - name: Install qemu-utils
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install qemu-utils
+          sudo modprobe nbd max_part=16
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,10 +51,11 @@ jobs:
     name: Build aarch64 VM
     runs-on: ubuntu-latest
     steps:
-      - name: Install qemu-utils
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install qemu-utils
+          sudo modprobe nbd max_part=16
 
       - name: Checkout
         uses: actions/checkout@v4
