--- a/.github/workflows/build_qemu.yml
+++ b/.github/workflows/build_qemu.yml
@@ -49,4 +49,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: accessmod-vm-${{ github.event.inputs.version || '5.9' }}_x86_64
-          path: _build/vm/alpine-accessmod-${{ github.event.inputs.version || '5.9' }}-x86_64.vdi
+          path: _build/vm/alpine-accessmod-${{ github.event.inputs.version || '5.9' }}.vdi
