--- a/.github/workflows/build_qemu.yml
+++ b/.github/workflows/build_qemu.yml
@@ -16,10 +16,6 @@ jobs:
   build-x86:
     name: Build x86_64 VM
     runs-on: ubuntu-latest
-    timeout-minutes: 30
-    defaults:
-      run:
-        working-directory: qemu
     steps:
       - name: Install dependencies
         run: |
@@ -37,6 +33,7 @@ jobs:
 
       - name: Build VM Image
         run: |
+          cd qemu
           apk add --no-cache alpine-make-vm-image qemu-img docker bash
           # Set default version if input is empty
           VERSION="${{ github.event.inputs.version }}"
@@ -52,5 +49,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: accessmod-vm-${{ github.event.inputs.version || '5.9' }}_x86_64
-          path: ${{ github.workspace }}/qemu/_build/vm/alpine-accessmod-${{ github.event.inputs.version || '5.9' }}.vdi
-          if-no-files-found: error
+          path: qemu/_build/vm/alpine-accessmod-${{ github.event.inputs.version || '5.9' }}-x86_64.vdi
+          if-no-files-found: warn
